--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
+body {
+ margin: 0;
+ padding: 0;
+}
+
 #nav-wrapper {
   position: absolute;
   width: 100% !important;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; 
-  z-index: 20;
   height: 5em;
   background-color: black;
 }
@@ -17,21 +17,21 @@
   margin-left: 1.5em;
   margin-right: 5em;
   float: left;
-}
-
+} 
+ 
 .nav-list {
   display: inline-block;
-  margin-top: 1em;
-}
-
+  margin-top: 1em; 
+} 
+  
 .link { 
   display: inline; 
   color: #FFF;
   font-family: sans-serif;
   font-size: 14px;
   text-decoration: none;
-margin-right: 2em;
-}
+  margin-right: 2em;
+}   
 
 #tickets-btn {
   float: right;
@@ -50,14 +50,9 @@ margin-right: 2em;
   background-color: #FFF;
 }
 
- #section-one {
- 
- }
-
- #one-background {
-  margin-top: 4em;
+#one-background {
   width: 100%;
- }
+}
 
 #section-two {
   height: 35em;
@@ -112,12 +107,14 @@ a {
 
 #section-three-background {
   position: relative;
+  width: 100%;
+  z-index: 0;
 }
 
 #google-download, #apple-download {
   position: relative;
-  height: 2em;
-  width: 8em;
+  height: 3em;
+  width: 10em;
   background-color: black;
   border-radius: 5px;
 }
